[project]
name = "null-claude"
version = "0.1.0"
description = "A terminal-based life simulator and simulation sandbox"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Changkun Ou", email = "hi@changkun.de" },
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
life = "life:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["life"]
